force-app/main/default/objects/Product2/fields/AcctSeed__GL_Account_Variable_3__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defaults the value on a billing line when the product is entered.</inlineHelpText>
    <label>GL Variable 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 3</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Products (GL Account Variable 3)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>