force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Category of a product.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Form</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>