force-app/main/default/objects/Product2/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>