force-app/main/default/objects/Product2/fields/IsRenewable__c.field-meta.xml
<CustomField>
    <fullName>IsRenewable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Renewable</label>
    <type>Checkbox</type>
</CustomField>