force-app/main/default/objects/Product2/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Liability</fullName>
            </value>
            <value>
                <fullName>Casualty</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Management Liability</fullName>
            </value>
            <value>
                <fullName>Fidelity Bonds</fullName>
            </value>
            <value>
                <fullName>Surety Bonds</fullName>
            </value>
            <value>
                <fullName>Transaction Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>