force-app/main/default/objects/Product2/fields/Policy_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Policy_Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Declaration</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Products (Policy Declaration)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>