force-app/main/default/objects/Product2/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course-of-Construction</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Wrap-Up Liability</fullName>
            </value>
            <value>
                <fullName>Commercial General Liability</fullName>
            </value>
            <value>
                <fullName>Contractors Pollution Liability</fullName>
            </value>
            <value>
                <fullName>Environmental Impairment Liability</fullName>
            </value>
            <value>
                <fullName>Errors &amp; Omissions Liability</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Liability</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Directors` and Officers` Liability</fullName>
            </value>
            <value>
                <fullName>Employment Practices Liability</fullName>
            </value>
            <value>
                <fullName>Fiduciary Liability</fullName>
            </value>
            <value>
                <fullName>Commercial Crime Bond</fullName>
            </value>
            <value>
                <fullName>Financial Institution Bond</fullName>
            </value>
            <value>
                <fullName>Commercial Surety</fullName>
            </value>
            <value>
                <fullName>Contract Surety</fullName>
            </value>
            <value>
                <fullName>Representations and Warranties</fullName>
            </value>
            <value>
                <fullName>Contingent Liability</fullName>
            </value>
            <value>
                <fullName>Tax Indemnity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>