force-app/main/default/objects/Product2/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <inlineHelpText>Identifies the type of business</inlineHelpText>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non - Program</fullName>
            </value>
            <value>
                <fullName>Sponsored Program</fullName>
            </value>
            <value>
                <fullName>Open Market Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>