force-app/main/default/objects/Product2/fields/Underwriting_Practive__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Practive__c</fullName>
    <inlineHelpText>Underwiting practice of a product.</inlineHelpText>
    <label>Underwriting Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Lines</fullName>
            </value>
            <value>
                <fullName>Commercial Lines</fullName>
            </value>
            <value>
                <fullName>Professional Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>