force-app/main/default/objects/Product2/recordTypes/Merlin_Products.recordType-meta.xml
<RecordType>
    <fullName>Merlin_Products</fullName>
    <active>true</active>
    <description>Represent product offered by Merlin</description>
    <label>Merlin Products</label>
</RecordType>