force-app/main/default/objects/Product2/recordTypes/Tax.recordType-meta.xml
<RecordType>
    <fullName>Tax</fullName>
    <active>true</active>
    <description>Represent tax information used by Account Seed</description>
    <label>Tax</label>
</RecordType>