force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Policy_Type__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Type_of_Business__c</columns>
    <columns>Underwriting_Practive__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>