force-app/main/default/objects/Product2/listViews/Merlin_Products.listView-meta.xml
<ListView>
    <fullName>Merlin_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Underwriting_Practive__c</columns>
    <columns>Category__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Declaration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Merlin_Products</value>
    </filters>
    <label>All Merlin Products</label>
</ListView>